--- a/dtm/index.html
+++ b/dtm/index.html
@@ -7,11 +7,11 @@
 <meta name=description content="We'd love to hear from you">
 <meta name=generator content="Hugo 0.91.2">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=/ananke/css/main.min.css>
+<link rel=stylesheet href=/radiology-dtm/ananke/css/main.min.css>
 <meta property="og:title" content="Dynamic Topics">
 <meta property="og:description" content="We'd love to hear from you">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://example.org/dtm/"><meta property="article:section" content>
+<meta property="og:url" content="http://leilaabdel.github.io/radiology-dtm/dtm/"><meta property="article:section" content>
 <meta itemprop=name content="Dynamic Topics">
 <meta itemprop=description content="We'd love to hear from you">
 <meta itemprop=wordCount content="109">
@@ -24,13 +24,13 @@
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
-<a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
+<a href=/radiology-dtm/ class="f3 fw2 hover-white no-underline white-90 dib">
 Radiology Dynamic Topic Modeling through COVID-19
 </a>
 <div class="flex-l items-center">
 <ul class="pl0 mr3">
 <li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/dtm/ title="Dynamic Topics page">
+<a class="hover-white no-underline white-90" href=/radiology-dtm/dtm/ title="Dynamic Topics page">
 Dynamic Topics
 </a>
 </li>
@@ -76,7 +76,7 @@ Dynamic Topics
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=http://example.org/>
+<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=http://leilaabdel.github.io/radiology-dtm/>
 &copy; Radiology Dynamic Topic Modeling through COVID-19 2022
 </a>
 <div>
