--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
 <meta name=description content="Investigating how topics in Radiology publications evolve before and after the COVID-19 pandemic">
 <meta name=generator content="Hugo 0.91.2">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/index.xml rel=alternate type=application/rss+xml title="Radiology Dynamic Topic Modeling through COVID-19">
-<link href=/index.xml rel=feed type=application/rss+xml title="Radiology Dynamic Topic Modeling through COVID-19">
+<link rel=stylesheet href=/radiology-dtm/ananke/css/main.min.css>
+<link href=/radiology-dtm/index.xml rel=alternate type=application/rss+xml title="Radiology Dynamic Topic Modeling through COVID-19">
+<link href=/radiology-dtm/index.xml rel=feed type=application/rss+xml title="Radiology Dynamic Topic Modeling through COVID-19">
 <meta property="og:title" content="Radiology Dynamic Topic Modeling through COVID-19">
 <meta property="og:description" content="Investigating how topics in Radiology publications evolve before and after the COVID-19 pandemic">
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://example.org/">
+<meta property="og:url" content="http://leilaabdel.github.io/radiology-dtm/">
 <meta itemprop=name content="Radiology Dynamic Topic Modeling through COVID-19">
 <meta itemprop=description content="Investigating how topics in Radiology publications evolve before and after the COVID-19 pandemic"><meta name=twitter:card content="summary">
 <meta name=twitter:title content="Radiology Dynamic Topic Modeling through COVID-19">
 <meta name=twitter:description content="Investigating how topics in Radiology publications evolve before and after the COVID-19 pandemic">
 </head>
 <body class="ma0 avenir bg-near-white">
-<header class="cover bg-top" style=background-image:url(http://example.org/images/ai-in-medicine.jpg)>
+<header class="cover bg-top" style=background-image:url(http://leilaabdel.github.io/radiology-dtm/images/ai-in-medicine.jpg)>
 <div class=bg-black-60>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
-<a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
+<a href=/radiology-dtm/ class="f3 fw2 hover-white no-underline white-90 dib">
 Radiology Dynamic Topic Modeling through COVID-19
 </a>
 <div class="flex-l items-center">
 <ul class="pl0 mr3">
 <li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/dtm/ title="Dynamic Topics page">
+<a class="hover-white no-underline white-90" href=/radiology-dtm/dtm/ title="Dynamic Topics page">
 Dynamic Topics
 </a>
 </li>
@@ -56,7 +56,7 @@ Investigating how topics in Radiology publications evolve before and after the C
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=http://example.org/>
+<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=http://leilaabdel.github.io/radiology-dtm/>
 &copy; Radiology Dynamic Topic Modeling through COVID-19 2022
 </a>
 <div>
