--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@ This is not the page you were looking for
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
 <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=http://leilaabdel.github.io/radiology-dtm/>
-&copy; Radiology Dynamic Topic Modeling through COVID-19 2022
+&copy; Leila Abdelrahman 2022
 </a>
 <div>
 <div class=ananke-socials>
