--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <meta name=twitter:description content="Investigating how topics in Radiology publications evolve before and after the COVID-19 pandemic">
 </head>
 <body class="ma0 avenir bg-near-white">
-<header class="cover bg-top" style=background-image:url(http://leilaabdel.github.io/radiology-dtm/images/ai-in-medicine.jpg)>
+<header class="cover bg-top" style=background-image:url(http://leilaabdel.github.io/radiology-dtm/images/dtm.jpg)>
 <div class=bg-black-60>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
@@ -57,7 +57,7 @@ Investigating how topics in Radiology publications evolve before and after the C
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
 <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=http://leilaabdel.github.io/radiology-dtm/>
-&copy; Radiology Dynamic Topic Modeling through COVID-19 2022
+&copy; Leila Abdelrahman 2022
 </a>
 <div>
 <div class=ananke-socials>
